Bug 1632698 - Part 1. Use NV_robustness_video_memory_purge with EGL and request robustness with WebRender.